--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -6,9 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:scrollbars="none"
+        android:scrollbars="none" android:fillViewport="true"
         android:layout_centerInParent="true"
-        android:layout_width="wrap_content" android:layout_height="wrap_content">
+        android:layout_width="match_parent" android:layout_height="match_parent">
 
         <org.fengwx.gif.GifImageView
             android:id="@+id/gifview"
